Correction to seperate footer container styles from main body styles.
- Corrected main body text from White (invisible with white background) to black so that it can be seen.

--- a/JokesWebApp/wwwroot/css/site.css
+++ b/JokesWebApp/wwwroot/css/site.css
@@ -71,6 +71,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.container, .container a {
+.footerContainer, .footerContainer a {
     color: #fff;
 }
